@@ -4,6 +4,7 @@
   * Calendar header has been simplified
   * Sticky popups are now cleaner and no longer display the words, 'description', 'project', or 'tags' as these can be deduced by context
   * Stickies can now be reassigned to another user in bulk from the project page
+  * Dragging grouped stickies on the calendar now prompts whether to move the invidual sticky, all incomplete stickies in the group, or all the stickies in the group
 
 == 0.22.6
 
